[gd_scene load_steps=3 format=2]

[ext_resource path="res://PlayerIntegration/WaitingArea/WaitingArea.gd" type="Script" id=1]
[ext_resource path="res://PlayerIntegration/WaitingArea/PlayerIndicator.tscn" type="PackedScene" id=2]

[node name="WaitingArea" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -10.0
margin_right = 20.5
margin_bottom = 10.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerIndicators" type="Node2D" parent="."]

[node name="PlayerIndicator0" parent="PlayerIndicators" instance=ExtResource( 2 )]
position = Vector2( 150, 210 )

[node name="PlayerIndicator1" parent="PlayerIndicators" instance=ExtResource( 2 )]
position = Vector2( 270, 210 )

[node name="PlayerIndicator2" parent="PlayerIndicators" instance=ExtResource( 2 )]
position = Vector2( 400, 210 )

[node name="PlayerIndicator3" parent="PlayerIndicators" instance=ExtResource( 2 )]
position = Vector2( 530, 210 )
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
